# pythoncapi-compat

./: .pre-commit-hooks.yaml  pyproject.toml  upgrade_pythoncapi.py
